syntax = "proto3";

package panier;
option go_package="verretech-microservices/panier/panierpb";
// import "proto/utilisateur.proto";
// import "proto/produit.proto";

message Article {
    string produitRef = 1;
    int32 qte = 2;
}

message Panier {
    string ID = 1;
    string utilisateurID = 2;
    repeated Article article = 3;
}

message PanierRequest {
    Panier panier = 1;
}

message ByUtilisateurRequest {
    string utilisateurID = 1;
}

message PanierResponse {
    Panier panier = 1;
}

service ServicePanier {
    rpc UpdatePanier(PanierRequest) returns (PanierResponse);
    rpc GetPanier(ByUtilisateurRequest) returns (PanierResponse);
}

